feat: make-w2v-5000vector

--- a/sentiment.ipynb
+++ b/sentiment.ipynb
@@ -105,14 +105,14 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Training dataset size = (6988, 3)\n",
-      "Dev dataset size = (1000, 3)\n"
+      "Training dataset size = (7988, 3)\n",
+      "Dev dataset size = (2000, 4)\n"
      ]
     }
    ],
    "source": [
-    "train_file = 'Dataset/train.csv'\n",
-    "devFile = 'Dataset/dev.csv'\n",
+    "train_file = 'Dataset/trainDev.csv'\n",
+    "devFile = 'Dataset/ourTest.csv'\n",
     "train_df = pd.read_csv(train_file)\n",
     "dev_df = pd.read_csv(devFile)\n",
     "print(f\"Training dataset size = {train_df.shape}\")\n",
@@ -136,17 +136,17 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Cleaned Training dataset size = (6988, 3)\n",
-      "Cleaned Dev dataset size = (1000, 3)\n"
+      "Cleaned Training dataset size = (7462, 3)\n",
+      "Cleaned Dev dataset size = (2000, 4)\n"
      ]
     }
    ],
    "source": [
     "# Data cleaning\n",
-    "training_data = cleanData(train_df, 'training', clean = False, clearData = True)\n",
+    "training_data = cleanData(train_df, 'training', clean = True, clearData = True)\n",
     "print(f\"Cleaned Training dataset size = {training_data.shape}\")\n",
     "# Data cleaning\n",
-    "dev_data = cleanData(dev_df, 'dev', clean = False, clearData = True)\n",
+    "dev_data = cleanData(dev_df, 'dev', clean = True, clearData = False)\n",
     "print(f\"Cleaned Dev dataset size = {dev_data.shape}\")"
    ]
   },
@@ -159,10 +159,10 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Processed Training dataset size = (6988, 5)\n",
+      "Processed Training dataset size = (7462, 5)\n",
       "Index(['text', 'category', 'stance', 'Lemmatization', 'sentiment'], dtype='object')\n",
-      "Processed dev dataset size = (1000, 5)\n",
-      "Index(['text', 'category', 'stance', 'Lemmatization', 'sentiment'], dtype='object')\n"
+      "Processed dev dataset size = (2000, 6)\n",
+      "Index(['id', 'text', 'stance', 'predictions', 'Lemmatization', 'sentiment'], dtype='object')\n"
      ]
     }
    ],
@@ -223,8 +223,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "1000\n",
-      "9379\n"
+      "2000\n",
+      "14272\n"
      ]
     }
    ],
@@ -263,17 +263,17 @@
      "output_type": "stream",
      "text": [
       "Before balancing:\n",
-      "Class=2, n=5538 (79.250%)\n",
-      "Class=1, n=1012 (14.482%)\n",
-      "Class=0, n=438 (6.268%)\n",
+      "Class=2, n=5943 (79.644%)\n",
+      "Class=1, n=1063 (14.246%)\n",
+      "Class=0, n=456 (6.111%)\n",
       "After balancing:\n",
-      "Class=2, n=5538 (33.333%)\n",
-      "Class=1, n=5538 (33.333%)\n",
-      "Class=0, n=5538 (33.333%)\n",
+      "Class=2, n=5943 (33.333%)\n",
+      "Class=1, n=5943 (33.333%)\n",
+      "Class=0, n=5943 (33.333%)\n",
       "Some notes about dimensions of the data\n",
-      "X_train size before cleaning = (6988, 9379)\n",
-      "X_train size = (16614, 9379)\n",
-      "y_train size = (16614,)\n"
+      "X_train size before cleaning = (7462, 14272)\n",
+      "X_train size = (17829, 14272)\n",
+      "y_train size = (17829,)\n"
      ]
     }
    ],
@@ -303,8 +303,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "X_test size = (1000, 9379)\n",
-      "y_test size = (1000,)\n",
+      "X_test size = (2000, 14272)\n",
+      "y_test size = (2000,)\n",
       "Unique values in the dataset = [-1  0  1]\n",
       "Unique values in the dataset = [-1  0  1]\n"
      ]
@@ -339,6 +339,29 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "2000\n",
+      "14272\n",
+      "7462\n",
+      "14272\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(len(dev_data['features']))\n",
+    "print(len(dev_data['features'][0]))\n",
+    "print(len(training_data['features']))\n",
+    "print(len(training_data['features'][0]))"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 12,
    "metadata": {},
    "outputs": [
@@ -348,20 +371,20 @@
      "text": [
       "              precision    recall  f1-score   support\n",
       "\n",
-      "          -1       0.22      0.43      0.29        70\n",
-      "           0       0.31      0.65      0.42       126\n",
-      "           1       0.93      0.69      0.79       804\n",
+      "          -1       0.55      0.25      0.35       619\n",
+      "           0       0.25      0.20      0.22       697\n",
+      "           1       0.43      0.73      0.54       684\n",
       "\n",
-      "    accuracy                           0.67      1000\n",
-      "   macro avg       0.49      0.59      0.50      1000\n",
-      "weighted avg       0.80      0.67      0.71      1000\n",
+      "    accuracy                           0.40      2000\n",
+      "   macro avg       0.41      0.39      0.37      2000\n",
+      "weighted avg       0.40      0.40      0.37      2000\n",
       "\n"
      ]
     },
     {
      "data": {
       "text/plain": [
-       "0.668"
+       "0.396"
       ]
      },
      "execution_count": 12,
@@ -378,7 +401,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -388,7 +411,7 @@
      "traceback": [
       "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
       "\u001b[0;31mKeyboardInterrupt\u001b[0m                         Traceback (most recent call last)",
-      "\u001b[0;32m/tmp/ipykernel_28020/2274880856.py\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m      3\u001b[0m \u001b[0m_y_train\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0my_train\u001b[0m \u001b[0;34m+\u001b[0m \u001b[0;36m1\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      4\u001b[0m \u001b[0m_y_test\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0my_test\u001b[0m \u001b[0;34m+\u001b[0m \u001b[0;36m1\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 5\u001b[0;31m \u001b[0mmodel\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mreport\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mmodelPipeline\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mX_train\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0m_y_train\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mX_test\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0m_y_test\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mxgb\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m'out/models/xgb.model'\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      6\u001b[0m \u001b[0mreport\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;32m/tmp/ipykernel_37231/2274880856.py\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m      3\u001b[0m \u001b[0m_y_train\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0my_train\u001b[0m \u001b[0;34m+\u001b[0m \u001b[0;36m1\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      4\u001b[0m \u001b[0m_y_test\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0my_test\u001b[0m \u001b[0;34m+\u001b[0m \u001b[0;36m1\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 5\u001b[0;31m \u001b[0mmodel\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mreport\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mmodelPipeline\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mX_train\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0m_y_train\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mX_test\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0m_y_test\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mxgb\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m'out/models/xgb.model'\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      6\u001b[0m \u001b[0mreport\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
       "\u001b[0;32m~/Michael/college/tasks/1st Term/NLP-Project/model.py\u001b[0m in \u001b[0;36mmodelPipeline\u001b[0;34m(X_train, y_train, X_test, y_test, model, model_name)\u001b[0m\n\u001b[1;32m     24\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     25\u001b[0m \u001b[0;32mdef\u001b[0m \u001b[0mmodelPipeline\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mX_train\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0my_train\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mX_test\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0my_test\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mmodel\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mmodel_name\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 26\u001b[0;31m     \u001b[0mmodel\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mtrainModel\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mX_train\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0my_train\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mmodel\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     27\u001b[0m     \u001b[0my_pred\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mtestModel\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mX_test\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mmodel\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     28\u001b[0m     \u001b[0mreport\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mevaluateModel\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0my_test\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0my_pred\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
       "\u001b[0;32m~/Michael/college/tasks/1st Term/NLP-Project/model.py\u001b[0m in \u001b[0;36mtrainModel\u001b[0;34m(X_train, y_train, model)\u001b[0m\n\u001b[1;32m      5\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      6\u001b[0m \u001b[0;32mdef\u001b[0m \u001b[0mtrainModel\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mX_train\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0my_train\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mmodel\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 7\u001b[0;31m     \u001b[0mmodel\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mfit\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mX_train\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0my_train\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      8\u001b[0m     \u001b[0;32mreturn\u001b[0m \u001b[0mmodel\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      9\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n",
       "\u001b[0;32m~/anaconda3/lib/python3.9/site-packages/xgboost/core.py\u001b[0m in \u001b[0;36minner_f\u001b[0;34m(*args, **kwargs)\u001b[0m\n\u001b[1;32m    618\u001b[0m             \u001b[0;32mfor\u001b[0m \u001b[0mk\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0marg\u001b[0m \u001b[0;32min\u001b[0m \u001b[0mzip\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0msig\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mparameters\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0margs\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    619\u001b[0m                 \u001b[0mkwargs\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0mk\u001b[0m\u001b[0;34m]\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0marg\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m--> 620\u001b[0;31m             \u001b[0;32mreturn\u001b[0m \u001b[0mfunc\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m**\u001b[0m\u001b[0mkwargs\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m    621\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    622\u001b[0m         \u001b[0;32mreturn\u001b[0m \u001b[0minner_f\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
@@ -517,7 +540,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[WARNING] [2022-12-26 17:22:15,730:Client-AutoML(1):117d6ed1-8531-11ed-9a9a-d39e09a92fe2] Capping the per_run_time_limit to 948.0 to have time for a least 2 models in each process.\n"
+      "[WARNING] [2022-12-26 20:11:46,959:Client-AutoML(1):b3f45e36-8548-11ed-916f-4fa44fc3bf46] Capping the per_run_time_limit to 947.0 to have time for a least 2 models in each process.\n"
      ]
     }
    ],
@@ -544,9 +567,9 @@
      "output_type": "stream",
      "text": [
       "auto-sklearn results:\n",
-      "  Dataset name: 117d6ed1-8531-11ed-9a9a-d39e09a92fe2\n",
+      "  Dataset name: b3f45e36-8548-11ed-916f-4fa44fc3bf46\n",
       "  Metric: accuracy\n",
-      "  Best validation score: 0.905917\n",
+      "  Best validation score: 0.917335\n",
       "  Number of target algorithm runs: 1\n",
       "  Number of successful target algorithm runs: 1\n",
       "  Number of crashed target algorithm runs: 0\n",
@@ -555,7 +578,7 @@
       "\n",
       "          rank  ensemble_weight           type      cost   duration\n",
       "model_id                                                           \n",
-      "2            1              1.0  random_forest  0.094083  65.555083\n"
+      "2            1              1.0  random_forest  0.082665  66.039781\n"
      ]
     }
    ],
@@ -573,7 +596,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "F1 score 0.48435876101136294\n"
+      "F1 score 0.29443428870259153\n"
      ]
     }
    ],
@@ -590,7 +613,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Accuracy score 0.710929519918284\n"
+      "Accuracy score 0.376\n"
      ]
     }
    ],
@@ -659,18 +682,7 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "LSTM(\n",
-      "  (lstm): LSTM(100, 100, num_layers=3, batch_first=True)\n",
-      "  (linear): Linear(in_features=100, out_features=3, bias=True)\n",
-      ")\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "train_dataset = NLPDataset(X_train.tolist(), (y_train+1).tolist())\n",
     "dev_dataset = NLPDataset(X_test.tolist(), (y_test+1).tolist())\n",
